Add CKeditor cdn for description formatting

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^38.0.1",
         "@popperjs/core": "^2.11.6",
         "bootstrap": "^5.2.2"
     }
